# epubreader

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ezored_project.yml  main.cpp
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/data/: ebook.epub
android/app/src/main/assets/www/: index.html
android/app/src/main/assets/www/css/: main.css
android/app/src/main/java/com/epubreader/epubreader/: App.java  AssetsHelper.java  EpubReaderFragment.java  MainActivity.java
android/app/src/main/res/layout/: activity_main.xml  fragment_epub_reader.xml
android/app/src/main/res/menu/: main_menu.xml
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
dependency-server/: djinni-generate.py  ezored_vendor.py
dependency-server/djinni/: proj.djinni
www/: index.html
www/css/: main.css
